# RayTracer

./: .clang-format  .gitignore  CMakeLists.txt  Freedom.code-workspace  Makefile  README.md  Raytracing.code-workspace  build.bat  envVars.bat
cmd/: build.bat  debug.bat  envVars.bat  run.bat
output/: image.ppm  outputImage.ppm
src/: aabb.h  box.h  bvh.h  camera.h  common.h  custom.ppm  dielectric.h  flipNormal.h  hitable.h  hitableList.h  hittable.h  hittableList.h  image.ppm  lambertian.h  main.cpp  material.h  metal.h  myTimer.h  onb.h  pdf.h  perlin.h  ray.h  rectangle.h  sphere.h  texture.h  transformation.h  vec3.h  volume.h
vs_workspace/: vs_workspace.sln  vs_workspace.vcxproj  vs_workspace.vcxproj.filters
